fixtures/frontend/milestone-2/invalid/ambiguous-domain-member/main.aivi
domain Duration over Int
    make : Int -> Duration

domain Count over Int
    make : Int -> Count

value bad = make 1
